--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./public/Favicon.png" type="image/x-icon" width="40px"  height="20px">
+    <link rel="shortcut icon" href="./Favicon.png" type="image/x-icon" width="40px"  height="20px">
     <title>Alpha Type</title>
   </head>
   <body>
